@@ -1,0 +1,1 @@
+<p id="msg">Error {$error}: {$http_msg}<br /><br />{$msg}</p>
