@@ -1,0 +1,5 @@
+		</div>
+
+		<div id="footer">AweMUD {version}<br /><a href="http://www.awemud.net">http://www.awemud.net</a></div>
+	</body>
+</html>
