@@ -1,0 +1,2 @@
+<p style="text-align: center;">Good-bye!</p>
+<p style="text-align: center;"><a href="/login">Login</a></p>
