@@ -1,0 +1,8 @@
+<table align="center">
+	<tr><th colspan="2">Site Statistics</th></tr>
+	<tr><td><label>Build:</label></td><td>{build}</td></tr>
+	<tr><td><label>Uptime:</label></td><td>{uptime}</td></tr>
+	<tr><td><label>Hostname:</label></td><td>{hostname}</td></tr>
+	<tr><td><label>Active Players:</label></td><td>{player-count}</td></tr>
+	<tr><td><label>Game Time:</label></td><td>{date} {time}</td></tr>
+</table>
