@@ -44,6 +44,7 @@ class SSettingsManager : public IManager
 	SETTING_STRING(scripts_path)
 	SETTING_STRING(db_path)
 	SETTING_STRING(misc_path)
+	SETTING_STRING(html_path)
 	SETTING_STRING(abuse_email)
 	SETTING_STRING(bugs_email)
 	SETTING_STRING(admin_email)
